fix: add overflow to .container

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    overflow: auto;
   }
 .nav-list {
     display: flex;
